fixed appear scrollbar when add  mermaid diagram

--- a/obsidian.css
+++ b/obsidian.css
@@ -1121,7 +1121,7 @@ tbody {
 }
 
 div.mermaidTooltip {
-  position: absolute !important;
+  /* position: absolute !important;  fixed appear scrollbar*/
   text-align: center !important;
   max-width: 200px !important;
   padding: 2px !important;
